--- a/DoxygenDocument/html/index.html
+++ b/DoxygenDocument/html/index.html
@@ -80,7 +80,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Busca');
 <div class="contents">
 <div class="textblock"><h1>Trabalho de Computação Gráfica</h1>
 <h2>Computação-UFC</h2>
-<h3>Equipe:</h3>
+<h3>Equipe British Empire:</h3>
 <ul>
 <li>Caio Viktor</li>
 <li>Cristiano Melo</li>
@@ -93,7 +93,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Busca');
  <h4>Descrição:</h4>
  <p>A classe main é a responsável por fazer o chamado a todas as sub-rotinas de criação da estrutura 
   lógica, além de ser a responsável pelo comunicação com o usuário por meio da interface.
-  ao executar o executável gerado pela classe main é necessário a passagem de um argumento como parâmetro que deve ser o local do arquivo ".obj" contendo o modelo que se deseja visualizar.<br/>
+  Ao executar o executável gerado pela classe main é necessário a passagem de um argumento como parâmetro que deve ser o local do arquivo ".obj" contendo o modelo que se deseja visualizar.<br/>
   <h4>Comandos:</h4>
   w,s : movem a câmera para frente e para trás<br/>
   a,d : movem a câmera para esquerda e direita<br/>
